# Matrix-Calculator

./: .gitignore  Cargo.toml  README.md
pkg/: Matrix_calculator.d.ts  Matrix_calculator.js  Matrix_calculator_bg.wasm.d.ts  package.json
src/: fraction.rs  main.rs
ui/: app-window.slint
